# LearningPython

./: LICENSE
advent-of-code-2015/: advent.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day10.py  day11.py  day12.py  day13.py  day16.py  day17.py
advent-of-code-2021/: advent.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08-part2.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17-plot.py  day17.py  day18-oo.py  day18.py
advent-of-code-2022/: README.md
advent-of-code-2023/: .gitignore  advent.py  day07.py  pyproject.toml
advent-of-code-2024/: TODO.txt  advent.py  day01.py  day02.py  day02_helped.py  day02_non_brute.py  day03.py  day04.py  day04_with_lib.py  day05.py  day06.go  day06.py  day06_dict.py  day06_map.go  day07.py  day07_decoupled.py  day07_funcs.py  day08.py  day09.py  day10.py  day11.py  day11_manual_cache.py  day11_timing.py  day12.py  day13.py  day13_sympy.py  day14.py  day14_tree.txt  day15.py  day16.py  day16_visualize.py  day17.py  day17_compact.py  day17_dataclass.py  day18.py  day18_bfs.py  day19.py  day19_multicore.py  day19_reddit.py  day20.py  (+9 more)
advent-of-code-2025/: .gitignore  pyproject.toml
advent-of-code-2025/app/: advent.py  day01.py  day01_edge.py  day02.py  day02_regex.py  day03.py  day03_alt.py  day03_ginsberg.py  day04.py  day05.py  day05_alt.py  day05_portion.py  day06.py  day06_concise.py  day06_uncommented.py  day07.py  day08.py  day08_graph.py  day08_union_find.py  day09.py  day09_shapely.py  day09_visualization.py  day10.py  day10_linear_programming.py  day10_reddit.py  day11.py  day11_alt.py  day12.py
advent-of-code-2025/tests/: test_advent.py  test_day01.py
advent-of-code-23/: README.md
classic-cs-in-python/: fib.py  pyproject.toml  trivial_compression.py
examples/: list-comprehensions.py
(+21 files in other folders)
