[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Brian Adkins",email = "brian@lojic.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black (>=25.11.0,<26.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "ipython (>=9.7.0,<10.0.0)",
    "networkx (>=3.5,<4.0)",
    "attrs (>=25.4.0,<26.0.0)",
    "portion (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=102
skip-string-normalization=true